--- a/o11nplugin-helloworld-package/pom.xml
+++ b/o11nplugin-helloworld-package/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <artifactId>helloworld</artifactId>
         <groupId>com.demo</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>7.5.0</version>
     </parent>
 
     <properties>
